@@ -104,3 +104,4 @@ Current
 	- API: added ison
 	- Modules: Added chanserv/invite
 	- Protocols: InspIRCd renamed to InspIRCd12, support for InspIRCd20 will be added soon.
+	- API: added event_stopic for topic bursts
